# trinurbs

./: CMakeLists.txt  README.md
include/: AnalysisElement.h  BSplineSpace.h  BezierNodalElement.h  Forest.h  Geometry.h  GeometryElement.h  IBaseIntegrate.h  IElemIntegrate.h  IParentSample.h  InputDataStructures.h  MultiscaleBezierNodalElement.h  MultiscaleForest.h  NURBSCache.h  NURBSCommon.h  OutputVTK.h  PeriodicForest.h  Point.h  Point3D.h  Point4D.h  base.h
input/: closed_cell_cube.hbs  macro.hbs  micro.hbs  simple_micro_lattice.hbs  simple_micro_pore.hbs  simple_micro_roundends.hbs  trivariate_3dprinted_beam.hbs  trivariate_3dprinted_beam_const_jacob.hbs  trivariate_3dprinted_beam_const_jacob_no_weighting.hbs  trivariate_3dprinted_beam_single_patch_const_jacob.hbs  trivariate_3dprinted_beam_single_patch_const_jacob_v2.hbs  trivariate_cube.hbs  trivariate_multipatch.hbs
scripts/: beam-model-generator.py  closed-cube-generator.py  test.py
src/: BSplineSpace.cpp  BezierNodalElement.cpp  Forest.cpp  Geometry.cpp  GeometryElement.cpp  IElemIntegrate.cpp  MultiscaleBezierNodalElement.cpp  MultiscaleForest.cpp  NURBSCommon.cpp  OutputVTK.cpp  PeriodicForest.cpp  Point.cpp  Point3D.cpp  Point4D.cpp  base.cpp
tests/: CMakeLists.txt  mpiFEassemblytest.cpp  multiscale_fe_test.cpp  multiscaleforesttest.cpp  periodictest.cpp  trinurbstest.cpp
